syntax = "proto3";

option go_package = "github.com/vedantwankhade/tsrgen/stats-service/service";

message StatsReq {
    repeated Issue issues = 1;
}

message Issue {
    string id = 1;
    string key = 2;
    string testType = 3;
}

message StatsRes {
    string html = 1;
}

service Stats {
    rpc GetHTML(StatsReq) returns (StatsRes) {}
}
